--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,8 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    kotlin_version = "1.3.72"
+    room_version = '2.4.2'
+}
